fixes flip card with backface visibility

--- a/src/building-blocks/flip-card/flip-card.scss
+++ b/src/building-blocks/flip-card/flip-card.scss
@@ -23,6 +23,7 @@ $flip-card-transition-speed: 0.6s;
   transition: $flip-card-transition-speed;
   transform-style: preserve-3d;
   position: relative;
+  backface-visibility: hidden;
 }
 
 .flip-card-inner-front,
